--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'java'
+    id 'java-library'
+    id 'checkstyle'
 }
 
-group 'CyberBug'
+group 'AT-10'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
@@ -10,7 +12,40 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
 }
+// CheckStyle configuration
+checkstyle {
+    toolVersion = '8.1'
+}
+
+// Cucumber Configuration Task.
+configurations {
+    cucumberRuntime {
+        extendsFrom testImplementation
+    }
+}
+
+task cucumber() {
+    dependsOn assemble, compileTestJava
+    doLast {
+        javaexec {
+            main = "cucumber.api.cli.Main"
+            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
+            args = ['--plugin', 'pretty', '--glue', 'gradle.cucumber', 'src/test/resources']
+        }
+    }
+}
+
+test{
+    useTestNG()
+}
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
+    compile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '1.7.2'
+    compile group: 'io.cucumber', name: 'cucumber-java', version: '4.2.0'
+    compile group: 'io.cucumber', name: 'cucumber-testng', version: '4.2.0'
+    compile group: 'io.cucumber', name: 'cucumber-picocontainer', version: '4.2.0'
+    compile group: 'net.masterthought', name: 'cucumber-reporting', version: '4.6.0'
+    compile group: 'log4j', name: 'log4j', version: '1.2.16'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 }
