add task to run alltest send parameter

--- a/build.gradle
+++ b/build.gradle
@@ -35,29 +35,9 @@ task cucumber() {
     }
 }
 
-tasks.withType(Test) {
-   
+test {
     useTestNG()
-    testLogging.showStandardStreams = true
-    scanForTestClasses = false
-    reports.html.enabled = true
-    ignoreFailures = false
-
     systemProperty "browserName", browserName
-    systemProperty "implicitWait", implicitWait
-    systemProperty "explicitWait", explicitWait
-}
-
-task runFeatures(type: Test) {
-    options {
-        useDefaultListeners = false
-        jvmArgs = ['-Dcucumber options= ' +
-                           '--glue trello.steps ' +
-                           '--glue trello.hooks ' +
-                           '--plugin pretty ' +
-                           '--plugin json:target/cucumber.json ' +
-                           'classpath:' + "src/test/resources/features"]
-    }
 }
 
 dependencies {
