--- a/build.gradle
+++ b/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     compile group: 'net.masterthought', name: 'cucumber-reporting', version: '4.6.0'
     compile group: 'log4j', name: 'log4j', version: '1.2.16'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    compile group: 'io.rest-assured', name: 'json-path', version: '4.0.0'
+    compile group: 'io.rest-assured', name: 'xml-path', version: '4.0.0'
+    compile group: 'io.rest-assured', name: 'rest-assured', version: '4.0.0'
+    compile group: 'org.everit.json', name: 'org.everit.json.schema', version: '1.5.1'
 }
