--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ task cucumber() {
         javaexec {
             main = "cucumber.api.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
-            args = ['--plugin', 'pretty', '--glue', 'gradle.cucumber', 'src/test/resources']
+            args = ['--plugin', 'pretty', '--plugin', 'html:target/cucumber', '--plugin', 'json:target/cucumber.json',
+                    '--glue', 'trello', 'src/test/resources/features']
         }
     }
 }
