--- a/build.gradle
+++ b/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     compile group: 'io.rest-assured', name: 'xml-path', version: '4.1.1'
     compile group: 'io.rest-assured', name: 'json-schema-validator', version: '4.1.1'
     compile group: 'com.github.scribejava', name: 'scribejava-apis', version: '2.5.2'
+    compile group: 'com.github.javafaker', name: 'javafaker', version: '0.15'
 }
